{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 29,
  "lineage": "67e369b6-27fb-f5b4-f5eb-f206985b9069",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:internet-gateway/igw-04990acfb833cbbf0",
            "id": "igw-04990acfb833cbbf0",
            "owner_id": "076049824452",
            "tags": {
              "Name": "main-vpc-igw"
            },
            "tags_all": {
              "Name": "main-vpc-igw"
            },
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:route-table/rtb-0a9d89c65e211404d",
            "id": "rtb-0a9d89c65e211404d",
            "owner_id": "076049824452",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04990acfb833cbbf0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-vpc-rt"
            },
            "tags_all": {
              "Name": "main-vpc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f492a1bfc11b1b91",
            "route_table_id": "rtb-0a9d89c65e211404d",
            "subnet_id": "subnet-0626fee4191383c83"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08df1fbd301234c9f",
            "route_table_id": "rtb-0a9d89c65e211404d",
            "subnet_id": "subnet-0c12e3730b8a702e9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea80228865dc5e76",
            "route_table_id": "rtb-0a9d89c65e211404d",
            "subnet_id": "subnet-0863df3aef2e64d59"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbb930b2115030b3",
            "route_table_id": "rtb-0a9d89c65e211404d",
            "subnet_id": "subnet-090cf49b2dd2f8628"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c75dfa364ab12be",
            "route_table_id": "rtb-0a9d89c65e211404d",
            "subnet_id": "subnet-0c4f86d7a7ce49a6b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:security-group/sg-09bdccc3f6c48e1d5",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-09bdccc3f6c48e1d5",
            "ingress": [],
            "name": "main-vpc-cluster-sg",
            "name_prefix": "",
            "owner_id": "076049824452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-vpc-cluster-sg"
            },
            "tags_all": {
              "Name": "main-vpc-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:security-group/sg-0c949b734e588e438",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c949b734e588e438",
            "ingress": [],
            "name": "main-vpc-node-sg",
            "name_prefix": "",
            "owner_id": "076049824452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-vpc-node-sg",
              "kubernetes.io/cluster/main-vpc-cluster": "owned"
            },
            "tags_all": {
              "Name": "main-vpc-node-sg",
              "kubernetes.io/cluster/main-vpc-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3945391668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09bdccc3f6c48e1d5",
            "self": false,
            "source_security_group_id": "sg-0c949b734e588e438",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-4089550548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09bdccc3f6c48e1d5",
            "self": false,
            "source_security_group_id": "sg-0c949b734e588e438",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-739229771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c949b734e588e438",
            "self": false,
            "source_security_group_id": "sg-09bdccc3f6c48e1d5",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1111645312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c949b734e588e438",
            "self": false,
            "source_security_group_id": "sg-0c949b734e588e438",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:subnet/subnet-0626fee4191383c83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0626fee4191383c83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076049824452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "tags_all": {
              "Name": "PublicSubnet-1",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:subnet/subnet-0c12e3730b8a702e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c12e3730b8a702e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076049824452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-2",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "tags_all": {
              "Name": "PublicSubnet-2",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:subnet/subnet-0863df3aef2e64d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.5.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0863df3aef2e64d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076049824452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-3",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "tags_all": {
              "Name": "PublicSubnet-3",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:subnet/subnet-090cf49b2dd2f8628",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.5.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090cf49b2dd2f8628",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076049824452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-4",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "tags_all": {
              "Name": "PublicSubnet-4",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:subnet/subnet-0c4f86d7a7ce49a6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.5.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4f86d7a7ce49a6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076049824452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-5",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "tags_all": {
              "Name": "PublicSubnet-5",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "vpc_id": "vpc-0af91a0e7c637ca61"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076049824452:vpc/vpc-0af91a0e7c637ca61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-070d4b2676b82bb4e",
            "default_route_table_id": "rtb-0eee8af531570949a",
            "default_security_group_id": "sg-09279a124309fe921",
            "dhcp_options_id": "dopt-0495435d78d8a4760",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0af91a0e7c637ca61",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eee8af531570949a",
            "owner_id": "076049824452",
            "tags": {
              "Author": "George",
              "Name": "main-vpc-vpc",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            },
            "tags_all": {
              "Author": "George",
              "Name": "main-vpc-vpc",
              "kubernetes.io/cluster/main-vpc-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}